--- a/src/5.fuzzy.ipynb
+++ b/src/5.fuzzy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 129,
    "id": "57301dc5",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
    "id": "46ca6451",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 131,
    "id": "231f6b80",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 132,
    "id": "d0d0907d",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 133,
    "id": "64c24e0e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 134,
    "id": "1c2213ff",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 135,
    "id": "1b861a33",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 136,
    "id": "d37e6544",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 137,
    "id": "79aa64dd",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 138,
    "id": "99494e53",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 139,
    "id": "f80bd9c6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "id": "4082a292",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 141,
    "id": "2c599ae9",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 142,
    "id": "5856f7c6",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 143,
    "id": "9d3291bd",
    "metadata": {},
    "outputs": [
@@ -222,56 +222,56 @@
      "text": [
       "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
       "--------------------------------------------------------------\n",
-      "-60    1.3   5      0.45   0.92   1        Bom      0.69      \n",
-      "-67    1.7   3      0.26   0.91   1        Bom      0.68      \n",
-      "-74    4.1   19     0.52   0.43   0        Ruim     0.54      \n",
-      "-64    1.3   15     0.50   0.88   1        Bom      0.65      \n",
-      "-60    3.4   70     0.78   0.50   0        Ruim     0.51      \n",
-      "-70    6.7   146    0.85   0.38   0        Ruim     0.57      \n",
-      "-63    4.9   35     0.83   0.41   0        Ruim     0.55      \n",
-      "-59    2.6   7      0.42   0.44   0        Ruim     0.53      \n",
-      "-76    5.6   56     0.69   0.33   0        Ruim     0.61      \n",
-      "-61    1.5   13     0.22   0.95   1        Bom      0.75      \n",
-      "-52    9.7   31     0.75   0.88   1        Bom      0.64      \n",
-      "-83    7.9   119    0.29   0.33   0        Ruim     0.61      \n",
-      "-93    12.5  47     0.71   0.39   0        Ruim     0.56      \n",
-      "-65    2.8   26     0.70   0.93   1        Bom      0.71      \n",
-      "-40    1.6   21     0.31   0.42   0        Ruim     0.55      \n",
-      "-60    1.6   6      0.26   0.84   1        Bom      0.60      \n",
-      "-51    5.3   77     0.89   0.37   0        Ruim     0.58      \n",
-      "-57    1.6   8      0.52   0.41   0        Ruim     0.55      \n",
-      "-51    1.2   7      0.18   0.33   0        Ruim     0.61      \n",
-      "-70    8.4   22     0.42   0.42   0        Ruim     0.54      \n",
-      "-64    1.2   13     0.55   0.34   0        Ruim     0.60      \n",
-      "-53    5.9   10     0.52   0.89   1        Bom      0.66      \n",
-      "-56    1.3   9      0.59   0.33   0        Ruim     0.61      \n",
-      "-59    3.0   26     0.05   0.36   0        Ruim     0.58      \n",
-      "-51    1.8   5      0.14   0.40   0        Ruim     0.56      \n",
-      "-64    2.5   150    0.82   0.43   0        Ruim     0.54      \n",
-      "-54    1.6   10     0.13   0.85   1        Bom      0.62      \n",
-      "-38    2.7   12     0.42   0.91   1        Bom      0.68      \n",
-      "-50    1.0   4      0.44   0.91   1        Bom      0.68      \n",
-      "-95    14.3  21     0.94   0.96   1        Bom      0.77      \n",
-      "-80    15.0  33     0.65   0.94   1        Bom      0.74      \n",
-      "-56    2.5   18     0.35   0.91   1        Bom      0.69      \n",
-      "-57    1.4   3      0.15   0.32   0        Ruim     0.62      \n",
-      "-56    1.2   10     0.44   0.36   0        Ruim     0.59      \n",
-      "-70    4.3   84     0.78   0.33   0        Ruim     0.61      \n",
-      "-66    4.0   18     0.54   0.38   0        Ruim     0.57      \n",
-      "-41    1.6   10     0.17   0.92   1        Bom      0.69      \n",
-      "-61    1.9   12     0.49   0.90   1        Bom      0.67      \n",
-      "-51    1.8   8      0.12   0.39   0        Ruim     0.56      \n",
-      "-72    3.3   20     0.73   0.90   1        Bom      0.66      \n",
-      "-64    1.9   7      0.20   0.90   1        Bom      0.66      \n",
-      "-61    1.0   5      0.08   0.42   0        Ruim     0.54      \n",
-      "-95    6.0   150    0.79   0.88   1        Bom      0.64      \n",
-      "-80    4.8   150    0.76   0.31   0        Ruim     0.63      \n",
-      "-57    6.0   28     0.82   0.90   1        Bom      0.67      \n",
-      "-65    3.2   129    0.79   0.90   1        Bom      0.67      \n",
-      "-66    9.2   17     0.77   0.91   1        Bom      0.68      \n",
-      "-83    4.2   28     0.89   0.91   1        Bom      0.68      \n",
-      "-71    4.7   16     0.61   0.88   1        Bom      0.64      \n",
-      "-79    5.8   35     0.70   0.91   1        Bom      0.68      \n"
+      "-59    1.1   17     0.20   0.33   0        Ruim     0.61      \n",
+      "-60    1.4   6      0.10   0.91   1        Bom      0.68      \n",
+      "-78    6.8   19     0.49   0.91   1        Bom      0.69      \n",
+      "-84    11.0  18     0.26   0.36   0        Ruim     0.58      \n",
+      "-64    3.2   7      0.20   0.36   0        Ruim     0.59      \n",
+      "-43    1.5   4      0.32   0.90   1        Bom      0.67      \n",
+      "-58    1.3   4      0.22   0.90   1        Bom      0.67      \n",
+      "-57    1.2   14     0.17   0.90   1        Bom      0.66      \n",
+      "-62    1.0   7      0.11   0.93   1        Bom      0.71      \n",
+      "-69    1.8   5      0.22   0.38   0        Ruim     0.57      \n",
+      "-62    3.1   7      0.34   0.32   0        Ruim     0.62      \n",
+      "-57    1.0   14     0.30   0.35   0        Ruim     0.59      \n",
+      "-49    2.6   18     0.19   0.41   0        Ruim     0.55      \n",
+      "-78    4.4   42     0.82   0.48   0        Ruim     0.52      \n",
+      "-66    2.9   10     0.44   0.89   1        Bom      0.65      \n",
+      "-43    1.2   20     0.25   0.34   0        Ruim     0.60      \n",
+      "-84    3.2   26     0.37   0.44   0        Ruim     0.53      \n",
+      "-52    1.8   12     0.15   0.35   0        Ruim     0.60      \n",
+      "-75    5.3   59     0.43   0.90   1        Bom      0.68      \n",
+      "-81    5.2   43     0.84   0.38   0        Ruim     0.57      \n",
+      "-71    5.0   46     0.77   0.33   0        Ruim     0.62      \n",
+      "-54    1.2   6      0.16   0.91   1        Bom      0.69      \n",
+      "-42    1.1   5      0.14   0.36   0        Ruim     0.58      \n",
+      "-69    3.4   150    0.79   0.89   1        Bom      0.65      \n",
+      "-75    11.0  44     0.94   0.34   0        Ruim     0.60      \n",
+      "-70    7.7   150    0.89   0.90   1        Bom      0.67      \n",
+      "-47    2.8   8      0.53   0.95   1        Bom      0.77      \n",
+      "-81    7.6   63     0.93   0.35   0        Ruim     0.60      \n",
+      "-63    1.2   6      0.42   0.89   1        Bom      0.65      \n",
+      "-82    5.5   65     0.93   0.89   1        Bom      0.66      \n",
+      "-48    1.2   15     0.49   0.92   1        Bom      0.70      \n",
+      "-66    3.1   51     0.57   0.88   1        Bom      0.64      \n",
+      "-45    2.2   10     0.14   0.92   1        Bom      0.70      \n",
+      "-52    1.1   4      0.21   0.39   0        Ruim     0.56      \n",
+      "-82    14.0  66     0.62   0.86   1        Bom      0.62      \n",
+      "-51    1.9   8      0.17   0.89   1        Bom      0.66      \n",
+      "-73    4.4   74     0.62   0.88   1        Bom      0.64      \n",
+      "-69    3.6   27     0.54   0.36   0        Ruim     0.58      \n",
+      "-79    8.7   46     0.46   0.92   1        Bom      0.71      \n",
+      "-74    8.0   54     0.63   0.35   0        Ruim     0.60      \n",
+      "-71    12.6  54     0.73   0.30   0        Ruim     0.65      \n",
+      "-77    3.8   112    0.51   0.91   1        Bom      0.69      \n",
+      "-58    1.4   6      0.09   0.32   0        Ruim     0.62      \n",
+      "-44    1.2   18     0.09   0.87   1        Bom      0.63      \n",
+      "-42    2.0   4      0.14   0.28   0        Ruim     0.67      \n",
+      "-55    5.3   111    0.85   0.30   0        Ruim     0.65      \n",
+      "-68    8.4   51     0.82   0.41   0        Ruim     0.55      \n",
+      "-83    6.9   150    0.81   0.35   0        Ruim     0.60      \n",
+      "-67    3.1   45     0.41   0.90   1        Bom      0.67      \n",
+      "-79    7.6   52     0.83   0.91   1        Bom      0.69      \n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 144,
    "id": "f9257d18",
    "metadata": {},
    "outputs": [
@@ -305,20 +305,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fusão de Dados salva em ../outputs/fusion_output.csv\n"
+      "Lógica Fuzzy salva em ../outputs/fuzzy_output.csv\n"
      ]
     }
    ],
    "source": [
-    "fusion_output = pd.DataFrame({\n",
+    "fuzzy_output = pd.DataFrame({\n",
     "    'class': cls,\n",
     "    'confidence': conf\n",
     "})\n",
     "\n",
     "os.makedirs(\"../outputs\", exist_ok=True)\n",
-    "fusion_output.to_csv(\"../outputs/fusion_output.csv\", index=False)\n",
+    "fuzzy_output.to_csv(\"../outputs/fuzzy_output.csv\", index=False)\n",
     "\n",
-    "print(\"Fusão de Dados salva em ../outputs/fusion_output.csv\")"
+    "print(\"Lógica Fuzzy salva em ../outputs/fuzzy_output.csv\")"
    ]
   }
  ],
