--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "id": "d8db0a7e",
    "metadata": {},
    "outputs": [],
@@ -31,19 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 2,
    "id": "d7e271a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fusion_output_df = pd.read_csv(\"../outputs/fusion_output.csv\")\n",
-    "fusion_output_class = fusion_output_df['class'].values\n",
-    "fusion_output_confidence = fusion_output_df['confidence'].values"
+    "fuzzy_output_df = pd.read_csv(\"../outputs/fuzzy_output.csv\")\n",
+    "fuzzy_output_class = fuzzy_output_df['class'].values\n",
+    "fuzzy_output_confidence = fuzzy_output_df['confidence'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 3,
    "id": "41a1f475",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 4,
    "id": "a00683f1",
    "metadata": {},
    "outputs": [],
@@ -73,20 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 5,
    "id": "5bfc18ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "confidence_fusion = np.where(fusion_output_class == 1,\n",
-    "    fusion_output_confidence,\n",
-    "    1.0 - fusion_output_confidence\n",
+    "confidence_fusion = np.where(fuzzy_output_class == 1,\n",
+    "    fuzzy_output_confidence,\n",
+    "    1.0 - fuzzy_output_confidence\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 6,
    "id": "2e84fe65",
    "metadata": {},
    "outputs": [],
@@ -102,8 +102,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "981f51ca",
+   "metadata": {},
+   "source": [
+    "### Inference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 7,
    "id": "4ea22f2f",
    "metadata": {},
    "outputs": [],
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 8,
    "id": "448b3ce7",
    "metadata": {},
    "outputs": [
@@ -127,56 +135,56 @@
      "text": [
       "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
       "---------------------------------------------------------------------------\n",
-      "-60    1.3   5      0.45   0.92   1        Bom      0.69      \n",
-      "-67    1.7   3      0.26   0.91   1        Bom      0.68      \n",
-      "-74    4.1   19     0.52   0.43   0        Ruim     0.52      \n",
-      "-64    1.3   15     0.50   0.88   1        Bom      0.63      \n",
-      "-60    3.4   70     0.78   0.50   0        Ruim     0.50      \n",
-      "-70    6.7   146    0.85   0.38   0        Ruim     0.57      \n",
-      "-63    4.9   35     0.83   0.41   0        Ruim     0.55      \n",
-      "-59    2.6   7      0.42   0.44   0        Ruim     0.54      \n",
-      "-76    5.6   56     0.69   0.33   0        Ruim     0.61      \n",
-      "-61    1.5   13     0.22   0.95   1        Bom      0.72      \n",
-      "-52    9.7   31     0.75   0.88   1        Bom      0.65      \n",
-      "-83    7.9   119    0.29   0.33   0        Ruim     0.59      \n",
-      "-93    12.5  47     0.71   0.39   0        Ruim     0.57      \n",
-      "-65    2.8   26     0.70   0.93   1        Bom      0.69      \n",
-      "-40    1.6   21     0.31   0.42   0        Ruim     0.53      \n",
-      "-60    1.6   6      0.26   0.84   1        Bom      0.59      \n",
-      "-51    5.3   77     0.89   0.37   0        Ruim     0.56      \n",
-      "-57    1.6   8      0.52   0.41   0        Ruim     0.55      \n",
-      "-51    1.2   7      0.18   0.33   0        Ruim     0.61      \n",
-      "-70    8.4   22     0.42   0.42   0        Ruim     0.55      \n",
-      "-64    1.2   13     0.55   0.34   0        Ruim     0.60      \n",
-      "-53    5.9   10     0.52   0.89   1        Bom      0.64      \n",
-      "-56    1.3   9      0.59   0.33   0        Ruim     0.59      \n",
-      "-59    3.0   26     0.05   0.36   0        Ruim     0.58      \n",
-      "-51    1.8   5      0.14   0.40   0        Ruim     0.56      \n",
-      "-64    2.5   150    0.82   0.43   0        Ruim     0.54      \n",
-      "-54    1.6   10     0.13   0.85   1        Bom      0.60      \n",
-      "-38    2.7   12     0.42   0.91   1        Bom      0.67      \n",
-      "-50    1.0   4      0.44   0.91   1        Bom      0.68      \n",
-      "-95    14.3  21     0.94   0.96   1        Bom      0.76      \n",
-      "-80    15.0  33     0.65   0.94   1        Bom      0.74      \n",
-      "-56    2.5   18     0.35   0.91   1        Bom      0.69      \n",
-      "-57    1.4   3      0.15   0.32   0        Ruim     0.59      \n",
-      "-56    1.2   10     0.44   0.36   0        Ruim     0.59      \n",
-      "-70    4.3   84     0.78   0.33   0        Ruim     0.61      \n",
-      "-66    4.0   18     0.54   0.38   0        Ruim     0.57      \n",
-      "-41    1.6   10     0.17   0.92   1        Bom      0.67      \n",
-      "-61    1.9   12     0.49   0.90   1        Bom      0.67      \n",
-      "-51    1.8   8      0.12   0.39   0        Ruim     0.54      \n",
-      "-72    3.3   20     0.73   0.90   1        Bom      0.65      \n",
-      "-64    1.9   7      0.20   0.90   1        Bom      0.66      \n",
-      "-61    1.0   5      0.08   0.42   0        Ruim     0.53      \n",
-      "-95    6.0   150    0.79   0.88   1        Bom      0.63      \n",
-      "-80    4.8   150    0.76   0.31   0        Ruim     0.61      \n",
-      "-57    6.0   28     0.82   0.90   1        Bom      0.65      \n",
-      "-65    3.2   129    0.79   0.90   1        Bom      0.66      \n",
-      "-66    9.2   17     0.77   0.91   1        Bom      0.68      \n",
-      "-83    4.2   28     0.89   0.91   1        Bom      0.68      \n",
-      "-71    4.7   16     0.61   0.88   1        Bom      0.64      \n",
-      "-79    5.8   35     0.70   0.91   1        Bom      0.68      \n"
+      "-59    1.1   17     0.20   0.33   0        Ruim     0.61      \n",
+      "-60    1.4   6      0.10   0.91   1        Bom      0.65      \n",
+      "-78    6.8   19     0.49   0.91   1        Bom      0.69      \n",
+      "-84    11.0  18     0.26   0.36   0        Ruim     0.56      \n",
+      "-64    3.2   7      0.20   0.36   0        Ruim     0.59      \n",
+      "-43    1.5   4      0.32   0.90   1        Bom      0.65      \n",
+      "-58    1.3   4      0.22   0.90   1        Bom      0.67      \n",
+      "-57    1.2   14     0.17   0.90   1        Bom      0.66      \n",
+      "-62    1.0   7      0.11   0.93   1        Bom      0.71      \n",
+      "-69    1.8   5      0.22   0.38   0        Ruim     0.54      \n",
+      "-62    3.1   7      0.34   0.32   0        Ruim     0.61      \n",
+      "-57    1.0   14     0.30   0.35   0        Ruim     0.59      \n",
+      "-49    2.6   18     0.19   0.41   0        Ruim     0.56      \n",
+      "-78    4.4   42     0.82   0.48   0        Ruim     0.52      \n",
+      "-66    2.9   10     0.44   0.89   1        Bom      0.63      \n",
+      "-43    1.2   20     0.25   0.34   0        Ruim     0.58      \n",
+      "-84    3.2   26     0.37   0.44   0        Ruim     0.54      \n",
+      "-52    1.8   12     0.15   0.35   0        Ruim     0.59      \n",
+      "-75    5.3   59     0.43   0.90   1        Bom      0.65      \n",
+      "-81    5.2   43     0.84   0.38   0        Ruim     0.55      \n",
+      "-71    5.0   46     0.77   0.33   0        Ruim     0.61      \n",
+      "-54    1.2   6      0.16   0.91   1        Bom      0.66      \n",
+      "-42    1.1   5      0.14   0.36   0        Ruim     0.56      \n",
+      "-69    3.4   150    0.79   0.89   1        Bom      0.63      \n",
+      "-75    11.0  44     0.94   0.34   0        Ruim     0.58      \n",
+      "-70    7.7   150    0.89   0.90   1        Bom      0.65      \n",
+      "-47    2.8   8      0.53   0.95   1        Bom      0.76      \n",
+      "-81    7.6   63     0.93   0.35   0        Ruim     0.57      \n",
+      "-63    1.2   6      0.42   0.89   1        Bom      0.64      \n",
+      "-82    5.5   65     0.93   0.89   1        Bom      0.66      \n",
+      "-48    1.2   15     0.49   0.92   1        Bom      0.70      \n",
+      "-66    3.1   51     0.57   0.88   1        Bom      0.65      \n",
+      "-45    2.2   10     0.14   0.92   1        Bom      0.70      \n",
+      "-52    1.1   4      0.21   0.39   0        Ruim     0.54      \n",
+      "-82    14.0  66     0.62   0.86   1        Bom      0.60      \n",
+      "-51    1.9   8      0.17   0.89   1        Bom      0.65      \n",
+      "-73    4.4   74     0.62   0.88   1        Bom      0.64      \n",
+      "-69    3.6   27     0.54   0.36   0        Ruim     0.56      \n",
+      "-79    8.7   46     0.46   0.92   1        Bom      0.68      \n",
+      "-74    8.0   54     0.63   0.35   0        Ruim     0.57      \n",
+      "-71    12.6  54     0.73   0.30   0        Ruim     0.64      \n",
+      "-77    3.8   112    0.51   0.91   1        Bom      0.66      \n",
+      "-58    1.4   6      0.09   0.32   0        Ruim     0.59      \n",
+      "-44    1.2   18     0.09   0.87   1        Bom      0.61      \n",
+      "-42    2.0   4      0.14   0.28   0        Ruim     0.64      \n",
+      "-55    5.3   111    0.85   0.30   0        Ruim     0.65      \n",
+      "-68    8.4   51     0.82   0.41   0        Ruim     0.56      \n",
+      "-83    6.9   150    0.81   0.35   0        Ruim     0.59      \n",
+      "-67    3.1   45     0.41   0.90   1        Bom      0.65      \n",
+      "-79    7.6   52     0.83   0.91   1        Bom      0.69      \n"
      ]
     }
    ],
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 9,
    "id": "f1ad0de5",
    "metadata": {},
    "outputs": [
