--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "id": "d8db0a7e",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pykalman import KalmanFilter"
+    "from filterpy.kalman import KalmanFilter"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "id": "d7e271a2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "id": "41a1f475",
    "metadata": {},
    "outputs": [],
@@ -54,13 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "id": "a00683f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "radnet_input_df = pd.read_csv(\"../inputs/radnet_input.csv\")\n",
     "radnet_input_efsr_edge = radnet_input_df['efsr_edge'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "5bfc18ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confidence_fusion = np.where(fuzzy_output_class == 1,\n",
+    "    fuzzy_output_confidence,\n",
+    "    1.0 - fuzzy_output_confidence\n",
+    ")"
    ]
   },
   {
@@ -73,32 +86,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5bfc18ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confidence_fusion = np.where(fuzzy_output_class == 1,\n",
-    "    fuzzy_output_confidence,\n",
-    "    1.0 - fuzzy_output_confidence\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "id": "2e84fe65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kf = KalmanFilter(\n",
-    "    transition_matrices=[1],\n",
-    "    observation_matrices=[1],\n",
-    "    initial_state_mean=confidence_fusion[0],\n",
-    "    initial_state_covariance=1.0,\n",
-    "    observation_covariance=1e-2,  # R\n",
-    "    transition_covariance=10e-2    # Q\n",
-    ")"
+    "kf = KalmanFilter(dim_x=1, dim_z=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "727c9ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kf.x = np.array([confidence_fusion[0]])\n",
+    "kf.F = np.array([[1.]])\n",
+    "kf.H = np.array([[1.]])\n",
+    "kf.P = 1.0   # covariância inicial do estado\n",
+    "kf.R = 1e-2  # covariância da observação (measurement noise)\n",
+    "kf.Q = 4e-2 # covariância do processo (process noise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "ff94a124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kalman = []\n",
+    "\n",
+    "for z in confidence_fusion:\n",
+    "    kf.predict()           # predição\n",
+    "    kf.update(z)           # atualização com nova medição\n",
+    "    kalman.append(kf.x[0]) # guarda o estado filtrado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "8b723454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kalman = np.array(kalman)"
    ]
   },
   {
@@ -111,21 +144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 116,
    "id": "4ea22f2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kalman, _ = kf.filter(confidence_fusion)\n",
-    "kalman = kalman.flatten()\n",
+    "threshold = 0.55\n",
     "\n",
-    "cls = (kalman >= 0.5).astype(int)\n",
+    "cls = (kalman >= threshold).astype(int)\n",
     "conf = np.where(cls == 1, kalman, 1.0 - kalman)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 117,
    "id": "448b3ce7",
    "metadata": {},
    "outputs": [
@@ -136,55 +168,55 @@
       "RSSI   ETX   Delay  Busy   EFSR   Classe   Status   Confiança \n",
       "---------------------------------------------------------------------------\n",
       "-59    1.1   17     0.20   0.33   0        Ruim     0.61      \n",
-      "-60    1.4   6      0.10   0.91   1        Bom      0.65      \n",
-      "-78    6.8   19     0.49   0.91   1        Bom      0.69      \n",
-      "-84    11.0  18     0.26   0.36   0        Ruim     0.56      \n",
-      "-64    3.2   7      0.20   0.36   0        Ruim     0.59      \n",
-      "-43    1.5   4      0.32   0.90   1        Bom      0.65      \n",
-      "-58    1.3   4      0.22   0.90   1        Bom      0.67      \n",
+      "-60    1.4   6      0.10   0.91   1        Bom      0.63      \n",
+      "-78    6.8   19     0.49   0.91   1        Bom      0.68      \n",
+      "-84    11.0  18     0.26   0.36   0        Ruim     0.54      \n",
+      "-64    3.2   7      0.20   0.36   0        Ruim     0.58      \n",
+      "-43    1.5   4      0.32   0.90   1        Bom      0.63      \n",
+      "-58    1.3   4      0.22   0.90   1        Bom      0.66      \n",
       "-57    1.2   14     0.17   0.90   1        Bom      0.66      \n",
-      "-62    1.0   7      0.11   0.93   1        Bom      0.71      \n",
-      "-69    1.8   5      0.22   0.38   0        Ruim     0.54      \n",
-      "-62    3.1   7      0.34   0.32   0        Ruim     0.61      \n",
+      "-62    1.0   7      0.11   0.93   1        Bom      0.70      \n",
+      "-69    1.8   5      0.22   0.38   0        Ruim     0.52      \n",
+      "-62    3.1   7      0.34   0.32   0        Ruim     0.60      \n",
       "-57    1.0   14     0.30   0.35   0        Ruim     0.59      \n",
       "-49    2.6   18     0.19   0.41   0        Ruim     0.56      \n",
-      "-78    4.4   42     0.82   0.48   0        Ruim     0.52      \n",
-      "-66    2.9   10     0.44   0.89   1        Bom      0.63      \n",
-      "-43    1.2   20     0.25   0.34   0        Ruim     0.58      \n",
+      "-78    4.4   42     0.82   0.48   0        Ruim     0.53      \n",
+      "-66    2.9   10     0.44   0.89   1        Bom      0.62      \n",
+      "-43    1.2   20     0.25   0.34   0        Ruim     0.56      \n",
       "-84    3.2   26     0.37   0.44   0        Ruim     0.54      \n",
       "-52    1.8   12     0.15   0.35   0        Ruim     0.59      \n",
-      "-75    5.3   59     0.43   0.90   1        Bom      0.65      \n",
-      "-81    5.2   43     0.84   0.38   0        Ruim     0.55      \n",
-      "-71    5.0   46     0.77   0.33   0        Ruim     0.61      \n",
-      "-54    1.2   6      0.16   0.91   1        Bom      0.66      \n",
-      "-42    1.1   5      0.14   0.36   0        Ruim     0.56      \n",
-      "-69    3.4   150    0.79   0.89   1        Bom      0.63      \n",
-      "-75    11.0  44     0.94   0.34   0        Ruim     0.58      \n",
-      "-70    7.7   150    0.89   0.90   1        Bom      0.65      \n",
-      "-47    2.8   8      0.53   0.95   1        Bom      0.76      \n",
-      "-81    7.6   63     0.93   0.35   0        Ruim     0.57      \n",
-      "-63    1.2   6      0.42   0.89   1        Bom      0.64      \n",
-      "-82    5.5   65     0.93   0.89   1        Bom      0.66      \n",
+      "-75    5.3   59     0.43   0.90   1        Bom      0.63      \n",
+      "-81    5.2   43     0.84   0.38   0        Ruim     0.54      \n",
+      "-71    5.0   46     0.77   0.33   0        Ruim     0.60      \n",
+      "-54    1.2   6      0.16   0.91   1        Bom      0.64      \n",
+      "-42    1.1   5      0.14   0.36   0        Ruim     0.54      \n",
+      "-69    3.4   150    0.79   0.89   1        Bom      0.62      \n",
+      "-75    11.0  44     0.94   0.34   0        Ruim     0.56      \n",
+      "-70    7.7   150    0.89   0.90   1        Bom      0.63      \n",
+      "-47    2.8   8      0.53   0.95   1        Bom      0.74      \n",
+      "-81    7.6   63     0.93   0.35   0        Ruim     0.54      \n",
+      "-63    1.2   6      0.42   0.89   1        Bom      0.62      \n",
+      "-82    5.5   65     0.93   0.89   1        Bom      0.65      \n",
       "-48    1.2   15     0.49   0.92   1        Bom      0.70      \n",
       "-66    3.1   51     0.57   0.88   1        Bom      0.65      \n",
       "-45    2.2   10     0.14   0.92   1        Bom      0.70      \n",
-      "-52    1.1   4      0.21   0.39   0        Ruim     0.54      \n",
-      "-82    14.0  66     0.62   0.86   1        Bom      0.60      \n",
+      "-52    1.1   4      0.21   0.39   0        Ruim     0.52      \n",
+      "-82    14.0  66     0.62   0.86   1        Bom      0.59      \n",
       "-51    1.9   8      0.17   0.89   1        Bom      0.65      \n",
       "-73    4.4   74     0.62   0.88   1        Bom      0.64      \n",
-      "-69    3.6   27     0.54   0.36   0        Ruim     0.56      \n",
-      "-79    8.7   46     0.46   0.92   1        Bom      0.68      \n",
-      "-74    8.0   54     0.63   0.35   0        Ruim     0.57      \n",
-      "-71    12.6  54     0.73   0.30   0        Ruim     0.64      \n",
-      "-77    3.8   112    0.51   0.91   1        Bom      0.66      \n",
-      "-58    1.4   6      0.09   0.32   0        Ruim     0.59      \n",
-      "-44    1.2   18     0.09   0.87   1        Bom      0.61      \n",
-      "-42    2.0   4      0.14   0.28   0        Ruim     0.64      \n",
-      "-55    5.3   111    0.85   0.30   0        Ruim     0.65      \n",
-      "-68    8.4   51     0.82   0.41   0        Ruim     0.56      \n",
+      "-69    3.6   27     0.54   0.36   0        Ruim     0.54      \n",
+      "-79    8.7   46     0.46   0.92   1        Bom      0.66      \n",
+      "-74    8.0   54     0.63   0.35   0        Ruim     0.55      \n",
+      "-71    12.6  54     0.73   0.30   0        Ruim     0.63      \n",
+      "-77    3.8   112    0.51   0.91   1        Bom      0.63      \n",
+      "-58    1.4   6      0.09   0.32   0        Ruim     0.57      \n",
+      "-44    1.2   18     0.09   0.87   1        Bom      0.59      \n",
+      "-42    2.0   4      0.14   0.28   0        Ruim     0.62      \n",
+      "-55    5.3   111    0.85   0.30   0        Ruim     0.64      \n",
+      "-68    8.4   51     0.82   0.41   0        Ruim     0.57      \n",
       "-83    6.9   150    0.81   0.35   0        Ruim     0.59      \n",
-      "-67    3.1   45     0.41   0.90   1        Bom      0.65      \n",
-      "-79    7.6   52     0.83   0.91   1        Bom      0.69      \n"
+      "-67    3.1   45     0.41   0.90   1        Bom      0.63      \n",
+      "-79    7.6   52     0.83   0.91   1        Bom      0.68      \n"
      ]
     }
    ],
@@ -210,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
    "id": "f1ad0de5",
    "metadata": {},
    "outputs": [
